Assorted responsive design changes

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
                     width: 50%;
                     float: right;
                 }
+                .link {
+                    width: 60px;
+                }
             }
             @media (max-width: 1000px) {
                 .splash {
@@ -31,9 +34,6 @@
                 }
                 .thing-pic {
                     height: 160px;
-                }
-                .link {
-                    width: 80px;
                 }
             }
             @media (max-width: 500px) {
@@ -197,25 +197,23 @@
         <div data-aos="fade" class="content" id="contacts">
             <h1 class="header">My Work</h1>
             <div class="link-list">
-                <a href="https://github.com/salvadornico"><img src="icons/github.png" class="link" alt="GitHub" width="60px"></a>
-                <a href="http://codepen.io/salvadornico"><img src="icons/codepen.png" class="link" alt="CodePen" width="60px"></a>
-                <a href="https://vimeo.com/roller4life"><img src="icons/vimeo.png" class="link" alt="Vimeo" width="60px"></a>
+                <a href="https://github.com/salvadornico"><img src="icons/github.png" class="link" alt="GitHub"></a>
+                <a href="http://codepen.io/salvadornico"><img src="icons/codepen.png" class="link" alt="CodePen"></a>
+                <a href="https://vimeo.com/roller4life"><img src="icons/vimeo.png" class="link" alt="Vimeo"></a>
             </div>
             <h1 class="header">Get In Touch</h1>
             <div class="link-list">
-                <a href="mailto:salvador.nico@gmail.com"><img src="icons/email.png" class="link" alt="Email" width="60px"></a>
-                <a href="https://www.linkedin.com/in/salvadornico"><img src="icons/linkedin.png" class="link" alt="LinkedIn" width="60px"></a>
-                <a href="https://plus.google.com/u/0/+NicoSalvador"><img src="icons/google.png" class="link" alt="Google+" width="60px"></a>
-                <a href="https://www.instagram.com/nicolrnzo"><img src="icons/instagram.png" class="link" alt="Instagram" width="60px"></a>
-                <a href="https://www.facebook.com/salvador.nico"><img src="icons/fb.png" class="link" alt="Facebook" width="60px"></a>
-                <a href="https://twitter.com/nicoLorenzooo"><img src="icons/twitter.png" class="link" alt="Twitter" width="60px"></a>
-                <a href="https://www.pinterest.com/roller4life/"><img src="icons/pinterest.png" class="link" alt="Pinterest" width="60px"></a>
+                <a href="mailto:salvador.nico@gmail.com"><img src="icons/email.png" class="link" alt="Email"></a>
+                <a href="https://www.linkedin.com/in/salvadornico"><img src="icons/linkedin.png" class="link" alt="LinkedIn"></a>
+                <a href="https://plus.google.com/u/0/+NicoSalvador"><img src="icons/google.png" class="link" alt="Google+"></a>
+                <a href="https://www.instagram.com/nicolrnzo"><img src="icons/instagram.png" class="link" alt="Instagram"></a>
+                <a href="https://www.facebook.com/salvador.nico"><img src="icons/fb.png" class="link" alt="Facebook"></a>
+                <a href="https://twitter.com/nicoLorenzooo"><img src="icons/twitter.png" class="link" alt="Twitter"></a>
+                <a href="https://www.pinterest.com/roller4life/"><img src="icons/pinterest.png" class="link" alt="Pinterest"></a>
+                <p class="section" style="padding-top:24px"><a href="Nico_Salvador-CV2017.pdf">Resum&#233;</a></p>
             </div>
-            <p>
-                <a href="Nico_Salvador-CV2017.pdf">Resum&#233;</a>
-            </p>
             <div class="divider"></div>
-            <p data-aos="fade" data-aos-duration="800" class="copyrights">
+            <p class="section">
                 &copy; 2017 Nico Salvador
             </p>    
         </div>
