--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="divider"></div>
         <div class="content">
             <h2 class="subhead">Things I've Dabbled In</h2>
-            <div data-aos="fade-up" class="section">
+            <div data-aos="fade-up" data-aos-duration="600" class="section">
                 <ul class="list">
                   <li>Cool tech and tinkering with it
                       <ul>
@@ -120,7 +120,7 @@
             </div>
             <div class="spacer"></div>
             <h2 class="subhead">Things That Inspire Me</h2>
-            <div data-aos="fade-up" class="section">
+            <div data-aos="fade-up" data-aos-duration="600" class="section">
                 <ul class="list">
                   <li>Stories behind great ideas</li>
                   <li>Elegant solutions to awkward problems</li>
@@ -129,7 +129,7 @@
             </div>
             <div class="spacer"></div>
             <h2 class="subhead">Things I'm Enjoying Lately</h2>
-            <div data-aos="fade-up" class="thing-box">
+            <div data-aos="fade-up" data-aos-duration="600" class="thing-box">
                 <div class="thing">
                     <a href="https://www.tested.com/">
                         <img class="thing-pic" src="things/tested-logo.png">
@@ -194,15 +194,15 @@
             <div class="divider"></div>
         </div>
 
-        <div data-aos="fade" class="content" id="contacts">
+        <div class="content" id="contacts">
             <h1 class="header">My Work</h1>
-            <div class="link-list">
+            <div data-aos="fade-up" data-aos-duration="600" class="link-list">
                 <a href="https://github.com/salvadornico"><img src="icons/github.png" class="link" alt="GitHub"></a>
                 <a href="http://codepen.io/salvadornico"><img src="icons/codepen.png" class="link" alt="CodePen"></a>
                 <a href="https://vimeo.com/roller4life"><img src="icons/vimeo.png" class="link" alt="Vimeo"></a>
             </div>
             <h1 class="header">Get In Touch</h1>
-            <div class="link-list">
+            <div data-aos="fade-up" data-aos-duration="600" class="link-list">
                 <a href="mailto:salvador.nico@gmail.com"><img src="icons/email.png" class="link" alt="Email"></a>
                 <a href="https://www.linkedin.com/in/salvadornico"><img src="icons/linkedin.png" class="link" alt="LinkedIn"></a>
                 <a href="https://plus.google.com/u/0/+NicoSalvador"><img src="icons/google.png" class="link" alt="Google+"></a>
@@ -210,8 +210,8 @@
                 <a href="https://www.facebook.com/salvador.nico"><img src="icons/fb.png" class="link" alt="Facebook"></a>
                 <a href="https://twitter.com/nicoLorenzooo"><img src="icons/twitter.png" class="link" alt="Twitter"></a>
                 <a href="https://www.pinterest.com/roller4life/"><img src="icons/pinterest.png" class="link" alt="Pinterest"></a>
-                <p class="section" style="padding-top:24px"><a href="Nico_Salvador-CV2017.pdf">Resum&#233;</a></p>
             </div>
+            <p class="section" style="padding-top:24px"><a href="Nico_Salvador-CV2017.pdf">Resum&#233;</a></p>
             <div class="divider"></div>
             <p class="section">
                 &copy; 2017 Nico Salvador
