Added Spotify playback

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                 .thing-pic {
                     height: 160px;
                 }
+                .music {
+                    visibility: hidden;
+                }
             }
             @media (max-width: 500px) {
                 .splash {
@@ -216,6 +219,9 @@
             <p class="section">
                 &copy; 2017 Nico Salvador
             </p>    
+        </div>
+        <div class="music">
+            <iframe src="https://embed.spotify.com/?uri=spotify%3Auser%3A12175595202%3Aplaylist%3A0UmSRTsfZlo6dG4XrydQ4w" width="350" height="280" frameborder="0" allowtransparency="true"></iframe>
         </div>
     </body>
 </html>
