Cleaned color scheme & updated text

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                   <li>Cool tech and tinkering with it
                       <ul>
                           <li>I've spent a lot of time optimizing and figuring out the best ways for me to use all the tech around me, particularly on Android devices <span class="comment">#nexusmasterrace #apkplz</span></li>
-                          <li>Currently learning Java/HTML/CSS for web and/or Android (I built this site from scratch!)</li>
+                          <li>Currently learning Java, HTML, CSS, Javascript, and Python</li>
                       </ul>
                   </li>
                   <li>Rollerblading
@@ -112,12 +112,12 @@
                           <li>Been at it on and off since 2002 <a href="https://vimeo.com/31335546">(see my lame 2011-era video footage)</a></li>
                           <li>Founded <a href="https://www.facebook.com/ElevateSkate/">Elevate Skate Co.</a> a while back (but it's closed now)</li>
                           <li>Learned a lot about filming and editing video from being involved here</li>
+                          <li>Branched off into parkour for a little while, where there's a lot of crossover</li>
                       </ul>
                   </li>
                   <li>Cars, and high performance driving in particular</li>
                   <li>Cooking and eating all kinds of food from around the world</li>
-                  <li>Parkour</li>
-                  <li>Football <span class="comment">#viscaBar&ccedil;a!</span></li>
+                  <li>Football (playing for fun with Xavier Alumni FC and supporting FC Barcelona with Penya Blaugrana Manila)</li>
                   <li>Working at a marketing/PR/events agency for over four years
                       <ul>
                           <li>I've organized an <a href="https://youtu.be/hyKqQg_m8Ds">indie-orchestra mashup concert</a>, <a href="https://www.youtube.com/watch?v=iqqKuvqXKj4">football tournaments</a>, and an <a href="http://www.interaksyon.com/interaktv/kia-puts-up-contest-for-pba-team-name-15-finalists-to-win-us-trip-to-watch-nba-game">online contest to name a professional basketball team</a>, among many other less interesting things</li>
