Adjusted file structure, markup

--- a/index.html
+++ b/index.html
@@ -45,9 +45,11 @@
 				<div class="col s12 l5">
 
 					<div class="card large hoverable">
+
 						<div class="card-image">
 							<img src="images/portrait.png" alt="That's me!">
 						</div>
+
 						<div class="card-content">
 							<h1 class="black-text">All Sorts Of Things</h1>
 							<p class="black-text">
@@ -55,6 +57,7 @@
 								Quezon City, Philippines
 							</p>
 						</div>
+
 					</div> <!-- /opening card -->
 
 				</div>
@@ -134,7 +137,7 @@
 								</div>
 								<div class="collapsible-body white">
 									<p>
-										Anything and everything I can get my hands on.. 3D modelling and printing, Lego, basic woodworking, hopefully electronics as well soon. There's just something special about creating something new, whatever it is.
+										Anything and everything I can get my hands on.. 3D modelling and printing, Lego, basic woodworking, hopefully electronics as well soon. There's just something special about creating something new, whatever it is. Coding is making too :)
 									</p>
 									<div class="center-align">
 										
@@ -181,7 +184,7 @@
 										<br>
 										Founded <a href="https://www.facebook.com/ElevateSkate/">Elevate Skate Co.</a>, importing gear from shops all over the world a while back, but it's closed now.
 										<br>
-										Learned a lot about filming and editing video from being involved here. Branched off into parkour for a little while, where there's a lot of crossover
+										Learned a lot about filming and editing video from being involved here. Branched off into parkour for a little while, where there's a lot of crossover.
 									</p>
 									<div class="center-align">
 										<iframe src="https://player.vimeo.com/video/31335546?portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
@@ -276,7 +279,7 @@
 
 					<div class="row">
 
-						<a class="waves-effect waves-dark btn-large yellow hoverable" href="Nico_Salvador-CV2017.pdf" id="resumeLink">
+						<a class="waves-effect waves-dark btn-large yellow hoverable" href="files/Nico_Salvador-CV2017.pdf" id="resumeLink">
 							<i class="material-icons left black-text">library_books</i>
 							<span class="black-text">Resum&#233;</span>
 						</a>
