Replaced second header with MakerBot video

--- a/index.html
+++ b/index.html
@@ -108,9 +108,11 @@
 		</header> <!-- /header -->
 		
 		<main>
+
 			<div class="parallax-container">
 				<div class="parallax"><img src="images/header1.png" alt="Some sample Kotlin code I wrote"></div>
 			</div>
+			
 
 			<div class="section container">
 
@@ -255,9 +257,11 @@
 
 			</div> <!-- /section-->
 
-			<div class="parallax-container">
-				<div class="parallax"><img src="images/header2.jpg" alt="Clark International Speedway, March 2014"></div>
-			</div>
+
+			<video class="responsive-video" muted autoplay loop>
+				<source src="images/makerbot.mp4" type="video/mp4">
+			</video>
+
 
 			<div class="section container" id="contacts">
 
