--- a/index.html
+++ b/index.html
@@ -258,9 +258,13 @@
 			</div> <!-- /section-->
 
 
-			<video class="responsive-video" muted autoplay loop>
-				<source src="images/makerbot.mp4" type="video/mp4">
-			</video>
+			<div class="parallax-container" id="video">
+				<div class="parallax">
+					<video muted autoplay loop>
+						<source src="images/makerbot.mp4" type="video/mp4">
+					</video>
+				</div>
+			</div>
 
 
 			<div class="section container" id="contacts">
