Added fallback to video element

--- a/index.html
+++ b/index.html
@@ -260,9 +260,10 @@
 
 			<div class="parallax-container" id="video">
 				<div class="parallax">
-					<video muted autoplay loop>
+					<video muted autoplay loop poster="images/header2.png">
 						<source src="images/makerbot.mp4" type="video/mp4">
 					</video>
+					<!-- <img src="images/header2.png" alt="3D printing an experiment on a MakerBot"> -->
 				</div>
 			</div>
 
