--- a/index.html
+++ b/index.html
@@ -260,10 +260,9 @@
 
 			<div class="parallax-container" id="video">
 				<div class="parallax">
-					<video muted autoplay loop poster="images/header2.png">
+					<video muted autoplay loop poster="images/header2.jpg">
 						<source src="images/makerbot.mp4" type="video/mp4">
 					</video>
-					<!-- <img src="images/header2.png" alt="3D printing an experiment on a MakerBot"> -->
 				</div>
 			</div>
 
