Trying GIF as image fallback

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 
 			<div class="parallax-container" id="video">
 				<div class="parallax">
-					<video muted autoplay loop poster="images/header2.jpg">
+					<video muted autoplay loop poster="images/header2.gif">
 						<source src="images/makerbot.mp4" type="video/mp4">
 					</video>
 				</div>
