Added screencaps of web projects

--- a/index.html
+++ b/index.html
@@ -57,11 +57,25 @@
 						</div>
 
 						<div class="card-content">
-							<h1 class="black-text">All Sorts Of Things</h1>
-							<p class="black-text">
-								Nico Salvador<br>
-								Quezon City, Philippines
-							</p>
+
+							<h1>Nico Salvador</h1>
+							<h3>Quezon City, Philippines</h3>
+
+							<div class="center-align">
+								<a href="mailto:salvador.nico@gmail.com">
+									<i class="fa fa-envelope" aria-hidden="true"></i>
+								</a>
+								<a href="https://github.com/salvadornico">
+									<i class="fa fa-github" aria-hidden="true"></i>
+								</a>
+								<a href="https://www.linkedin.com/in/salvadornico">
+									<i class="fa fa-linkedin" aria-hidden="true"></i>
+								</a>
+								<a href="https://www.facebook.com/salvador.nico">
+									<i class="fa fa-facebook" aria-hidden="true"></i>
+								</a>
+							</div>
+
 						</div>
 
 					</div>
@@ -131,14 +145,26 @@
 										I've always enjoyed tinkering with gadgets and poking around the deepest levels of settings in the software I use, so programming was a natural next step. I love the way it demands both the ability to solve problems creatively and then the application of those ideas in a logical and systematic fashion.
 									</p>
 									<p>
-										I'm well-versed in Javascript, PHP, HTML, and CSS for web development. I'm also decent at Java for Android, jQuery, and SQL. Next up, I'm looking to learn Kotlin and Python.
+										I'm well-versed in Javascript, jQuery, PHP, Laravel, HTML, and CSS for web development. I'm also decent at Java for Android, and I'm looking to learn Kotlin and Python next.
 									</p>
 									<span>Some of my past projects:</span>
-									<ul>
-										<li><a href="http://salvadornico.x10host.com/f1vis">Monoposto</a> (Formula 1 data visualisation)</li>
-										<li><a href="https://salvadornico.github.io/brain-train/web">Brain Train</a> (a simple memory game)</li>
-										<li><a href="https://salvadornico.github.io/tuitt/module-1/capstone1">Leather &amp; Turf</a> (a Philippines Football League club reference site)</li>
-									</ul>
+									<div class="row">
+										<div class="col s12 m6 l4">
+											<a href="http://salvadornico.x10host.com/f1vis">
+												<img src="images/portfolio/monoposto.png" alt="Monoposto - Formula 1 data visualisation" class="responsive-img tooltipped" data-position="top" data-delay="50" data-tooltip="Monoposto">
+											</a>
+										</div>
+										<div class="col s12 m6 l4">
+											<a href="https://salvadornico.github.io/Brain-Train/web">
+												<img src="images/portfolio/brain-train.png" alt="Brain Train - a simple memory game" class="responsive-img tooltipped" data-position="top" data-delay="50" data-tooltip="Brain Train">
+											</a>
+										</div>
+										<div class="col s12 m6 l4">
+											<a href="https://salvadornico.github.io/Tuitt/module-1/capstone1">
+												<img src="images/portfolio/leather-turf.png" alt="Leather and Turf - a Philippines Football League club reference site" class="responsive-img tooltipped" data-position="top" data-delay="50" data-tooltip="Leather and Turf">
+											</a>
+										</div>
+									</div>
 								</div>
 							</li>
 
@@ -252,7 +278,7 @@
 				</div> <!-- /thingBox row-->
 				
 				<div class="row" id="music">
-					<iframe src="https://embed.spotify.com/?uri=spotify%3Auser%3A12175595202%3Aplaylist%3A0UmSRTsfZlo6dG4XrydQ4w"  frameborder="0" allowtransparency="true"></iframe>
+					<!-- <iframe src="https://embed.spotify.com/?uri=spotify%3Auser%3A12175595202%3Aplaylist%3A0UmSRTsfZlo6dG4XrydQ4w"  frameborder="0" allowtransparency="true"></iframe> -->
 				</div>
 
 			</div> <!-- /section-->
