Migrated styles to Stylus

--- a/app/index.html
+++ b/app/index.html
@@ -17,12 +17,8 @@
 		<!-- Materialize CSS -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
 
-		<!--build:css css/main.min.css -->
-
-			<!-- Custom CSS -->
-			<link rel="stylesheet" href="css/styles.css" src="//normalize-css.googlecode.com/svn/trunk/normalize.css">
-
-		<!-- endbuild -->
+		<!-- Custom CSS -->
+		<link rel="stylesheet" href="css/styles.css" src="//normalize-css.googlecode.com/svn/trunk/normalize.css">
 
 		<!-- jQuery  -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -55,9 +51,9 @@
 	
 	<body class="indigo darken-1">
 			
-		<header class="container row banner" id="banner">
+		<header class="container row" id="banner">
 
-			<div class="valign">
+			<div>
 
 				<div class="col s12 l5">
 
