--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
 		<title>Redirect</title>
 
 		<meta http-equiv="refresh" content="0; URL='dist/index.html'">
-
 		<meta name="keywords" content="automatic redirection">
+
+		<script type="text/javascript">
+            window.location.href = "https://salvadornico.github.io/dist/index.html"
+        </script>
 
 	</head>
 
