Updated base.styl to new version

--- a/app/index.html
+++ b/app/index.html
@@ -296,7 +296,7 @@
 				</div> <!-- /thingBox row-->
 
 				<div class="row" id="music">
-					<iframe src="https://embed.spotify.com/?uri=spotify%3Auser%3A12175595202%3Aplaylist%3A0UmSRTsfZlo6dG4XrydQ4w" frameborder="0" allowtransparency="true" class="center-X"></iframe>
+					<iframe src="https://embed.spotify.com/?uri=spotify%3Auser%3A12175595202%3Aplaylist%3A0UmSRTsfZlo6dG4XrydQ4w" frameborder="0" allowtransparency="true"></iframe>
 				</div>
 
 			</div> <!-- /section-->
@@ -313,7 +313,7 @@
 
 			<div class="section container" id="contacts">
 
-				<div class="center-Y">
+				<div>
 					<div class="row">
 
 						<h3 class="center-align section-header">My Work</h3>
