--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 
 	<head>
 
-		<title>Redirect</title>
+		<title>Salvadornico.com</title>
 
 		<meta http-equiv="refresh" content="0; URL='dist/index.html'">
 		<meta name="keywords" content="automatic redirection">
 
 		<script type="text/javascript">
-            window.location.href = "https://salvadornico.github.io/dist/index.html"
+            window.location.href = "http://salvadornico.com/dist/index.html"
         </script>
 
 	</head>
