Changed redirect page title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 	<head>
 
-		<title>Salvadornico.com</title>
+		<title>Nico Salvador</title>
 
 		<meta http-equiv="refresh" content="0; URL='dist/index.html'">
 		<meta name="keywords" content="automatic redirection">
