--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 		<meta name="keywords" content="automatic redirection">
 
 		<script type="text/javascript">
-            window.location.href = "http://salvadornico.com/dist/index.html"
-        </script>
+			window.location.href = "https://salvadornico.com/dist/index.html"
+		</script>
 
 	</head>
 
