--- a/index.html
+++ b/index.html
@@ -1,24 +1,11 @@
+<!DOCTYPE html>
 <html>
-
-	<head>
-
-		<title>Nico Salvador</title>
-
-		<meta http-equiv="refresh" content="0; URL='dist/index.html'">
-		<meta name="keywords" content="automatic redirection">
-
-		<script type="text/javascript">
-			window.location.href = "https://salvadornico.com/dist/index.html"
-		</script>
-
-	</head>
-
-	<body>
-
-		<p>
-			Click <a href="dist/index.html">here</a> if your browser doesn't redirect you automatically.
-		</p>
-
-	</body>
-
+  <head>
+    <meta charset="utf-8">
+    <title>portfolio_v3</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
+  </body>
 </html>
