--- a/index.html
+++ b/index.html
@@ -2,12 +2,27 @@
 <html lang="en">
 
 	<head>
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-92196324-1"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag('js', new Date());
+
+			gtag('config', 'UA-92196324-1');
+
+		</script>
+
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+
 		<title>Nico Salvador</title>
 		<link rel="icon" type="image/png" href="https://res.cloudinary.com/salvadornico/image/upload/v1507347645/Portfolio/icon.png">
 		<base target="_blank">
+
 		<link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans" rel="stylesheet">
 		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
